--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,40 +1,35 @@
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8"><title> Preguntas </title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <link rel='stylesheet' 
-        type='text/css'
-        media='only screen and (min-width: 530px) and (min-device-width: 481px)'
-        href='/stylesheets/wide.css' />
-  <link rel='stylesheet'
-        type='text/css'
-        media='only screen and (max-width: 480px)' 
-        href='/stylesheets/smartphone.css' />
-  
-</head> 
+<html lang="es">
+  <head>
+  	<meta charset="utf-8">
+    <title>Preguntas</title>
+    <link rel='stylesheet' type='text/css' 
+    	href='/stylesheets/style.css' />
+    <link rel='stylesheet' type='text/css' 
+    	media='only screen and (min-width:530px) and (min-device-width: 481px)'
+    	href='/stylesheets/wide.css' />
+    <link rel='stylesheet' type='text/css' 
+    	media='only screen and (max-width:480px)' 
+    	href='/stylesheets/smartphone.css' />
 
-<body>
-<div id="page-wrap">
-  <header class="main" id="h1">
-    <h2>Quiz: el juego de las preguntas</h2>
-  </header>
-
-  <nav class="main" id="n1" role="navigation">
-    <span><a href="/">Inicio</a></span>
-    <span><a href="/quizes/question">Preguntas</a></span>
-    <span><a href="/author">Créditos</a></span>
-  </nav>
-
-  <section class="main" id="s1">
-    <%- body %>
-  </section>
-
-  <footer class="main" id="f1">
-    <a target="_blank" href="http://es.wikipedia.org/wiki/Quiz">      ¿Que es un Quiz?</a>
-    <a target="_blank" href="https://github.com/pragn81/quiz-quiz2015">Mi repositorio en gitHub</a>
-  </footer>
-</div>
-</body> 
+  </head>
+  <body>
+  	<div id="page-wrap">
+  		<header class="main" id="h1">
+  			<h2>Quiz: el juego de las preguntas</h2>
+  		</header>
+	    <nav class="main" id="n1" role="navigation">
+	    	<span><a href="/">Inicio</a></span>
+	    	<span><a href="/quizes">Preguntas</a></span>
+        <span><a href="/author">Créditos</a></span>
+	    </nav>
+	    <section class="main" id="s1">
+	    	<%-body %>
+	    </section>
+	    <footer class="main" id="f1">
+	    	<a href="http://www.wikipedia.org/wiki/Quiz">¿Que es un quiz?</a>
+        <a href="https://github.com/aziraphel/quiz/">Mi repositorio en gitHub</a>
+	    </footer>
+	</div>    
+  </body>
 </html>
