--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -6,9 +6,29 @@
 </form>
 <br/>
 <p><a href="/quizes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a></p>
-
-
-<p><strong>Comentarios:</strong></p>
-<% for(index in quiz.Comments) { %>
-	<p>- <%=quiz.Comments[index].texto%></p>
+<table>
+<tr><td colspan="3"><strong>
+<% if (quiz.Comments.length == 0) { %>
+	No hay comentarios:
+<% } else { %>
+	Comentarios:
 <% } %>
+</strong></td></tr>
+<% for(index in quiz.Comments) { %>
+	<% if (quiz.Comments[index].publicado || session.user) { %>
+	<tr><td><%=quiz.Comments[index].texto%></td>
+		<% if(session.user && !quiz.Comments[index].publicado) { %>
+		<td><a href="/quizes/<%= quiz.id %>/comments/<%= quiz.Comments[index].id %>/publish">
+			<button>Publicar</button></a></td>
+		<% } else if(session.user && quiz.Comments[index].publicado) { %>
+		<td><a href="/quizes/<%= quiz.id %>/comments/<%= quiz.Comments[index].id %>/unpublish">
+			<button>Despublicar</button></a></td>
+		<% } %>	
+		<% if (session.user) { %>
+		<td><form method="post" action="/quizes/<%= quiz.id %>/comments/<%= quiz.Comments[index].id %>?_method=delete">
+		<button type="submit" onClick="return confirm('Borrar: <%= quiz.Comments[index].texto %>')">Borrar</button></a></form></td>
+		<% } %>
+	</tr>	
+	<% } %>	
+<% }  %>
+</table>
