--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,6 +28,7 @@
 	    	<span><a href="/">Inicio</a></span>
 	    	<span><a href="/quizes">Preguntas</a></span>
         <span><a href="/author">Créditos</a></span>
+        <span><a href="/quizes/statistics">Estadisticas</a></span>
 	    </nav>
 	    <section class="main" id="s1">
         <% if (errors.length) { %>
@@ -42,7 +43,7 @@
 	    </section>
 	    <footer class="main" id="f1">
 	    	<a href="http://www.wikipedia.org/wiki/Quiz">¿Que es un quiz?</a>
-        <a href="https://github.com/aziraphel/quiz/">Mi repositorio en gitHub</a>
+        <a href="https://github.com/pragn81/quiz-quiz2015/">Mi repositorio en gitHub</a>
 	    </footer>
 	</div>    
   </body>
